--- a/easyearth_plugin/resources.qrc
+++ b/easyearth_plugin/resources.qrc
@@ -4,5 +4,6 @@
         <file>icons/point.png</file>
         <file>icons/predict.png</file>
         <file>icons/clear.png</file>
+        <file>icons/spinner.gif</file>
     </qresource>
 </RCC>
