--- a/easyearth_plugin/resources.qrc
+++ b/easyearth_plugin/resources.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/plugins/sam_qgis_plugin">
-        <file>icon.png</file>
+        <file>icons/icon.png</file>
         <file>icons/point.png</file>
         <file>icons/predict.png</file>
         <file>icons/clear.png</file>
